--- a/analysis.html
+++ b/analysis.html
@@ -36,6 +36,35 @@ ul.task-list li input[type="checkbox"] {
 <link href="analysis_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="analysis_files/libs/bootstrap/bootstrap-bb462d781dde1847d9e3ccf7736099dd.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
+  <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+const typesetMath = (el) => {
+  if (window.MathJax) {
+    // MathJax Typeset
+    window.MathJax.typeset([el]);
+  } else if (window.katex) {
+    // KaTeX Render
+    var mathElements = el.getElementsByClassName("math");
+    var macros = [];
+    for (var i = 0; i < mathElements.length; i++) {
+      var texText = mathElements[i].firstChild;
+      if (mathElements[i].tagName == "SPAN") {
+        window.katex.render(texText.data, mathElements[i], {
+          displayMode: mathElements[i].classList.contains('display'),
+          throwOnError: false,
+          macros: macros,
+          fleqn: false
+        });
+      }
+    }
+  }
+}
+window.Quarto = {
+  typesetMath
+};
+</script>
 
 </head>
 
@@ -72,19 +101,96 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="cell">
 <div class="cell-output cell-output-stderr">
+<pre><code>Warning: package 'MASS' was built under R version 4.5.1</code></pre>
+</div>
+<div class="cell-output cell-output-stderr">
 <pre><code>Warning: package 'purrr' was built under R version 4.5.1</code></pre>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output cell-output-stdout">
+<pre><code>Call:
+polr(formula = approval ~ ideology + education, data = x)
+
+Coefficients:
+              ideologyLiberal              ideologyModerate 
+                   0.61486022                    2.39760437 
+         ideologyConservative     ideologyVery Conservative 
+                   4.45525288                    5.44610561 
+educationHigh School Graduate         educationSome College 
+                  -0.09573811                   -0.31099458 
+              education2-Year               education4-Year 
+                  -0.32454679                   -0.52082362 
+           educationPost-Grad 
+                  -0.72732760 
+
+Intercepts:
+           Strongly Disapprove|Disapprove / Somewhat Disapprove 
+                                                       2.258003 
+Disapprove / Somewhat Disapprove|Neither Approve nor Disapprove 
+                                                       2.732765 
+      Neither Approve nor Disapprove|Approve / Somewhat Approve 
+                                                       2.818909 
+                    Approve / Somewhat Approve|Strongly Approve 
+                                                       3.932747 
+
+Residual Deviance: 99073.66 
+AIC: 99099.66 </code></pre>
 </div>
 </div>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="analysis_files/figure-html/unnamed-chunk-3-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="analysis_files/figure-html/unnamed-chunk-4-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
-<p>Public opinion about national leaders often varies with political beliefs and personal characteristics. Using data from the 2020 Cooperative Election Study, which is a large national survey of over 50,000 Americans, we explore how presidential approval differs between respondents who identify as Very Liberal and Very Conservative.</p>
+<p>Public opinion about national leaders often varies with political beliefs and personal characteristics. Using data from the 2020 Cooperative Election Study, which is a large national survey of over 50,000 Americans, we explore how presidential approval differs between respondents who identify as Very Liberal and Very Conservative. One concern is that survey respondents might be systematically different from other Americans.</p>
+<p><span class="math display">\[
+P(Y \leq k) = \frac{1}{1 + \exp\left[-\left(\theta_k - \beta_1 X_1 - \beta_2 X_2\right)\right]}
+\]</span></p>
+<p>with</p>
+<p><span class="math display">\[
+Y \sim \text{Ordinal}(\boldsymbol{\rho}), \quad \boldsymbol{\rho} = (\rho_1, \rho_2, \dots, \rho_K)
+\]</span></p>
+<div class="cell">
+<div class="cell-output cell-output-stderr">
+<pre><code>
+Re-fitting to get Hessian</code></pre>
+</div>
+<div class="cell-output cell-output-stdout">
+<pre><code># A tibble: 13 × 7
+   term                estimate std.error statistic conf.low conf.high coef.type
+   &lt;chr&gt;                  &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt;     &lt;dbl&gt; &lt;chr&gt;    
+ 1 ideologyLiberal       0.615     0.0538     11.4     0.510    0.721  coeffici…
+ 2 ideologyModerate      2.40      0.0474     50.6     2.31     2.49   coeffici…
+ 3 ideologyConservati…   4.46      0.0499     89.3     4.36     4.55   coeffici…
+ 4 ideologyVery Conse…   5.45      0.0550     99.1     5.34     5.55   coeffici…
+ 5 educationHigh Scho…  -0.0957    0.0600     -1.60   -0.213    0.0219 coeffici…
+ 6 educationSome Coll…  -0.311     0.0607     -5.12   -0.430   -0.192  coeffici…
+ 7 education2-Year      -0.325     0.0638     -5.09   -0.450   -0.199  coeffici…
+ 8 education4-Year      -0.521     0.0606     -8.59   -0.640   -0.402  coeffici…
+ 9 educationPost-Grad   -0.727     0.0634    -11.5    -0.852   -0.603  coeffici…
+10 Strongly Disapprov…   2.26      0.0724     31.2    NA       NA      scale    
+11 Disapprove / Somew…   2.73      0.0727     37.6    NA       NA      scale    
+12 Neither Approve no…   2.82      0.0727     38.8    NA       NA      scale    
+13 Approve / Somewhat…   3.93      0.0735     53.5    NA       NA      scale    </code></pre>
+</div>
+</div>
+<p><span class="math display">\[
+\begin{aligned}
+\eta &amp;= 0.61\,\text{ideology}_{\text{Liberal}} + 2.4\,\text{ideology}_{\text{Moderate}} + 4.46\,\text{ideology}_{\text{Conservative}} + 5.45\,\text{ideology}_{\text{Very Conservative}} \\
+&amp;\quad - 0.10\,\text{education}_{\text{High School Graduate}} - 0.31\,\text{education}_{\text{Some College}} - 0.32\,\text{education}_{\text{2-Year}} \\
+&amp;\quad - 0.52\,\text{education}_{\text{4-Year}} - 0.73\,\text{education}_{\text{Post-Grad}} \\
+\\
+\log\left[ \frac{P(\text{approval} \leq \text{Strongly Disapprove})}{1 - P(\text{approval} \leq \text{Strongly Disapprove})} \right] &amp;= 2.26 + \eta \\
+\log\left[ \frac{P(\text{approval} \leq \text{Disapprove / Somewhat Disapprove})}{1 - P(\text{approval} \leq \text{Disapprove / Somewhat Disapprove})} \right] &amp;= 2.73 + \eta \\
+\log\left[ \frac{P(\text{approval} \leq \text{Neither Approve nor Disapprove})}{1 - P(\text{approval} \leq \text{Neither Approve nor Disapprove})} \right] &amp;= 2.82 + \eta \\
+\log\left[ \frac{P(\text{approval} \leq \text{Approve / Somewhat Approve})}{1 - P(\text{approval} \leq \text{Approve / Somewhat Approve})} \right] &amp;= 3.93 + \eta
+\end{aligned}
+\]</span></p>
 
 </main>
 <!-- /main column -->
